# conan-sdl2pp

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  HACKING.md  Makefile  README.md  bootstrap.sh  build.py  cmake.patch  conanfile.py  config.yaml  sdl2ttf_path.patch  table.py
test_package/: .clang-format  CMakeLists.txt  compile.sh  conanfile.py  test_package.cpp
